@@ -1,3 +1,8 @@
+2005-06-06 Alain Magloire
+	Fix PR 98182
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/BreakpointManager.java
+	* cdi/org/eclipse/cdt/debug/mi/core/cdi/LocationBreakpoint.java
+
 2005-05-25 Alain Magloire
 	Fix PR 95705
 	* mi/org/eclipse/cdt/debug/mi/core/output/MIInfoSharedLibraryInfo.java
